; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/hw/hfi1/extr_chip.c_init_other.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/hw/hfi1/extr_chip.c_init_other.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hfi1_devdata = type { i32 }

@CCE_ERR_MASK = common dso_local global i32 0, align 4
@MISC_ERR_MASK = common dso_local global i32 0, align 4
@DRIVER_MISC_MASK = common dso_local global i64 0, align 8
@DCC_ERR_FLG_EN = common dso_local global i32 0, align 4
@DC_DC8051_ERR_EN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hfi1_devdata*)* @init_other to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_other(%struct.hfi1_devdata* %0) #0 {
  %2 = alloca %struct.hfi1_devdata*, align 8
  store %struct.hfi1_devdata* %0, %struct.hfi1_devdata** %2, align 8
  %3 = load %struct.hfi1_devdata*, %struct.hfi1_devdata** %2, align 8
  %4 = load i32, i32* @CCE_ERR_MASK, align 4
  %5 = call i32 @write_csr(%struct.hfi1_devdata* %3, i32 %4, i64 -1)
  %6 = load %struct.hfi1_devdata*, %struct.hfi1_devdata** %2, align 8
  %7 = load i32, i32* @MISC_ERR_MASK, align 4
  %8 = load i64, i64* @DRIVER_MISC_MASK, align 8
  %9 = call i32 @write_csr(%struct.hfi1_devdata* %6, i32 %7, i64 %8)
  %10 = load %struct.hfi1_devdata*, %struct.hfi1_devdata** %2, align 8
  %11 = load i32, i32* @DCC_ERR_FLG_EN, align 4
  %12 = call i32 @write_csr(%struct.hfi1_devdata* %10, i32 %11, i64 -1)
  %13 = load %struct.hfi1_devdata*, %struct.hfi1_devdata** %2, align 8
  %14 = load i32, i32* @DC_DC8051_ERR_EN, align 4
  %15 = call i32 @write_csr(%struct.hfi1_devdata* %13, i32 %14, i64 -1)
  ret void
}

declare dso_local i32 @write_csr(%struct.hfi1_devdata*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
